# arxiv-daily-digest

./: .env.example  BRANDING.md  Makefile  README.md  package-lock.json  package.json  requirements.txt  tsconfig.base.json  vercel.json
.github/workflows/: daily-ingest.yml
api/: worker.py
apps/: __init__.py
apps/web/: middleware.ts  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
apps/web/components/: digest-card.test.tsx  digest-card.tsx  digest-feed.tsx  digest-header.test.tsx  digest-header.tsx  discover-card.test.tsx  discover-card.tsx  discover-grid.tsx  expandable-abstract.tsx  nav.tsx  onboarding-form.test.tsx  onboarding-form.tsx  paper-actions.test.tsx  paper-actions.tsx  paper-summary.test.tsx  paper-summary.tsx  saved-queue.tsx  sign-in-button.tsx  sign-out-button.tsx
apps/web/lib/: auth-callbacks.test.ts  auth-callbacks.ts  auth.ts  authors.ts  cache.test.ts  cache.ts  dates.test.ts  dates.ts  db.ts  env.ts  followed-authors.ts  (+3 more)
apps/worker/: package.json  pyproject.toml
apps/worker/app/: config.py  db.py  main.py
apps/worker/app/services/: arxiv.py  clustering.py  embeddings.py  ingest.py  prototypes.json  ranking.py  similarity.py  summaries.py  topics.py
apps/worker/arxiv_digest_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/tests/: test_arxiv.py  test_author_matching.py  test_ingest.py  test_ranking.py  test_summaries.py  test_topics.py
db/: schema.sql
scripts/: backfill-history.sh  precompute-prototypes.py  run-ingest.py
(+26 files in other folders)
